Fixed font size of header when window was being shown on mobile. Cleaned up header desktop/mobile header code.

--- a/browse/static/browse/css/main.css
+++ b/browse/static/browse/css/main.css
@@ -46,6 +46,10 @@
     .desktop {
         visibility: hidden;
     }
+    .mFont {
+        background-color: red;
+        font-size: 70px;
+    }
 }
 /* Body and html should span whole page
  * https://www.kirupa.com/html5/make_body_take_up_full_browser_height.htm
